# symbolizer

./: CMakeLists.txt  README.md
examples/: simple.cpp
include/: symbolizer.hpp
src/: symbolizer.cpp
